// Copyright 2020 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.api.service;
option go_package = "github.com/kapetaniosci/pipe/pkg/app/api/service";

import "validate/validate.proto";
import "pkg/model/common.proto";
import "pkg/model/pipeline.proto";
import "pkg/model/application_resource.proto";

message Event {
    string id = 1;
    int64 timestamp = 2;

    // Pipeline Events.
    message PipelineStatusChanged {
        string pipeline_id = 1 [(validate.rules).string.min_len = 1];
        pipe.model.Application application = 2 [(validate.rules).message.required = true];
        pipe.model.PipelineStatus previous = 3;
        pipe.model.PipelineStatus current = 4;
        string description = 5;
    }
    message StageStatusChanged {
        string pipeline_id = 1 [(validate.rules).string.min_len = 1];
        string stage_id = 2 [(validate.rules).string.min_len = 1];
        pipe.model.StageStatus previous = 3;
        pipe.model.StageStatus current = 4;
        string description = 5;
    }

    // K8sResource Events.
    message K8sResourceAdded {
        string application_id = 1 [(validate.rules).string.min_len = 1];
        pipe.model.K8sResource resource = 2 [(validate.rules).message.required = true];
    }
    message K8sResourceUpdated {
        string application_id = 1 [(validate.rules).string.min_len = 1];
        pipe.model.K8sResource before = 2 [(validate.rules).message.required = true];
        pipe.model.K8sResource after = 3 [(validate.rules).message.required = true];
    }
    message K8sResourceDeleted {
        string application_id = 1 [(validate.rules).string.min_len = 1];
        pipe.model.K8sResource resource = 2 [(validate.rules).message.required = true];
    }

    oneof inner {
        PipelineStatusChanged pipeline_status_changed = 100;
        StageStatusChanged stage_status_changed = 101;

        K8sResourceAdded application_resource_added = 200;
        K8sResourceUpdated application_resource_updated = 201;
        K8sResourceDeleted applicaiton_resource_deleted = 202;
    }
}
